# Nirukta

./: .gitignore  README.md  index.html  package-lock.json  package.json
backend/: .env.example  requirements.txt
backend/app/: main.py
backend/app/agents/: evaluator.py  planner.py  router_node.py
backend/app/api/routes/: agents.py  auth.py  conversation.py  evaluation.py  tools.py
backend/app/core/: config.py
backend/app/models/: agent_state.py
backend/app/tools/: business_analytics.py  document_qa.py  human_in_loop.py  metadata.py  nl2sql.py  python_repl.py
docs/design/: DESIGN_SYSTEM.md
docs/planning/: Nirukta_Development_Guidebook.docx  ORCHESTRATION_APPROACH.md
frontend/: index.html  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/shared/: DashletCard.tsx  Logo.tsx  SideNav.tsx  StatusDot.tsx  TopBar.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/control-center/: Accuracy.tsx  Agents.tsx  Cost.tsx  Evaluation.tsx  Governance.tsx  KnowledgeBase.tsx  Models.tsx  Observability.tsx  Overview.tsx  Prompts.tsx  (+2 more)
frontend/src/utils/: api.ts  tokens.ts
infrastructure/docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
src/: App.tsx  index.css
src/components/: ChatPanel.tsx  DashboardContent.tsx  DashboardLayout.tsx  Header.tsx  PromptGallery.tsx  Sidebar.tsx  SuggestionCard.tsx
src/pages/: ChatExperiencePage.tsx
src/services/: chat.service.ts
src/styles/: layout.css  variables.css
z/: .env.example  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .yamllint.yaml  CLAUDE.md  Makefile  PRE_COMMIT_QUICKSTART.md  PRE_COMMIT_SETUP.md  README.md  deployment.md  docker-compose.yml  pyproject.toml
z/TODOs/: azure-vm-deployment.md  infrastructure-consolidation-plan.md  integration.md  intestion.md  overall_jan_feb.md
z/backend/: pyproject.toml  pytest.ini  requirements.txt
z/backend/app/: __init__.py  config.py  logger.py  main.py
z/backend/app/models/: __init__.py  chat.py
z/configs/: backend.yaml  engine.yaml  frontend.yaml  settings.py
z/configs/litellm/: config.yaml  config.yaml.backup
z/data/schema_analysis/: analysis.json  report.md  zuna_etl_analysis.json  zuna_etl_report.md  zuna_seed_analysis.json  zuna_seed_raw_analysis.json  zuna_seed_raw_report.md
z/data/seed_data/: README.md  generation_log.txt
z/data/zuna_seed/: b2b_contracts.csv  b2b_credit_notes.csv  b2b_customer_addresses.csv  b2b_customers.csv  b2b_dispatches.csv  b2b_events_stream.csv  b2b_invoices.csv  b2b_kpi_daily_snapshots.csv  b2b_order_allocations.csv  b2b_order_events.csv  b2b_order_lines.csv  b2b_orders.csv  b2b_payments.csv  b2b_picking_batches.csv  b2b_portal_api_clients.csv  b2b_price_list.csv  b2b_product_sales.csv  b2b_product_wise_sales.csv  b2b_products.csv  b2b_quality_inspections.csv  b2b_returns.csv  b2b_sales_agents.csv  b2b_sales_daily.csv  b2b_sales_monthly.csv  b2b_sales_yearly.csv  b2b_shipment_tracking_events.csv  b2b_vendor_partners.csv  delivery_slots.csv  delivery_status.csv  ecom_ab_test.csv  ecom_acquisition_agents.csv  ecom_activity_log.csv  ecom_browsing_history.csv  ecom_cart_items.csv  ecom_carts.csv  ecom_coupon_usage.csv  ecom_coupons.csv  ecom_customer_addresses.csv  ecom_customer_segmentation.csv  ecom_customers.csv  (+46 more)
z/dockerfiles/: backend.Dockerfile  engine.Dockerfile  frontend.Dockerfile
z/docs/: CHART_SUPPORT.md  ENV_VARS.md  LANGGRAPH_MEMORY.md  LANGGRAPH_MEMORY_VALIDATION.md  RICH_CONTENT_RENDERING.md  SERVICES.md  TRACKING_AND_OBSERVABILITY.md  TROUBLESHOOTING.md
z/docs/development/: TEST_RESULTS.md
z/engine/: pyproject.toml  pytest.ini  requirements.txt
z/engine/app/: __init__.py  config.py  logger.py  main.py
z/engine/app/clients/: __init__.py  azure_openai_client.py  langfuse_client.py  litellm_client.py
z/engine/app/routers/: health.py
z/engine/app/routers/qna_agent/: __init__.py  graph.py  memory.py  router.py  service.py  state.py  tools.py
z/engine/app/routers/qna_workflow/: __init__.py  chains.py  router.py  service.py
z/engine/app/schemas/: __init__.py  common.py  qna.py
z/engine/app/services/: __init__.py  llm_service.py  processor.py
z/engine/app/utilities/: __init__.py  chart_formatter.py  message_trimmer.py  prompt_loader.py
z/engine/prompts/: formatter_prompt.md
z/frontend/: index.html  package-lock.json  package.json  vite.config.ts
z/frontend/src/: App.tsx
z/frontend/src/api/: client.ts
z/frontend/src/components/: ChatInterface.tsx  ConversationList.tsx  MermaidDiagram.tsx  Message.tsx  MessageInput.tsx  MessageList.tsx  PlotlyChart.tsx  SortableTable.tsx
z/frontend/src/styles/: main.css
z/frontend/src/types/: chat.ts
z/prompts/: formatter_prompt.md
z/scripts/: README.md  analyze_mssql_schema.py  app.py  backup.py  etl_ingest.py  generate_schema_report.py  graph_ingestion_app.py  run_tests.sh  setup-pre-commit.sh  structured_ingestion_app.py  structured_metadata_extraction_app.py  unstructured_ingestion_app.py  unstructured_metadata_extraction_app.py
z/scripts/mssql-init/: 01-create-databases.py
z/scripts/postgres-init/: 01-create-databases.sh
z/tests/: __init__.py  conftest.py  pytest.ini
z/tests/backend/: test_api.py
z/tests/engine/: test_api.py  test_processor.py
z/tests/integration/: test_full_flow.py  test_langfuse.py  test_langfuse.sh  test_litellm.py  test_litellm.sh
(+9 files in other folders)
