[project]
name = "zuna"
version = "0.1.0"
description = "Zuna - Chat application with FastAPI backend, React frontend, and AI engine"
requires-python = ">=3.12"
dependencies = [
    "typer[all]>=0.9.0",
    "loguru>=0.7.0",
    "rich>=13.0.0",
    "pandas>=2.0.0",
    "pyodbc>=5.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "openpyxl>=3.1.5",
]

[tool.ruff]
# Line length configuration
line-length = 120
indent-width = 4

# Python version target
target-version = "py312"

# Exclude directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "backend/.venv",
    "engine/.venv",
    "scripts/.venv",
]

[tool.ruff.lint]
# Enable comprehensive rule sets
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "S",      # flake8-bandit (security)
    "C4",     # flake8-comprehensions
    "RUF",    # ruff-specific rules
]

# Ignore specific rules
ignore = [
    "E501",   # Line too long (handled by formatter)
    "S101",   # Use of assert (common in tests)
    "S104",   # Possible binding to all interfaces
    "S105",   # Possible hardcoded password (too many false positives)
    "S106",   # Possible hardcoded password (too many false positives)
    "S107",   # Possible hardcoded password (too many false positives)
    "PLR0913", # Too many arguments to function call
    "PLR2004", # Magic value used in comparison
]

# Allow fix for all enabled rules (when `--fix`) is provided
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Ignore certain rules in specific files
"__init__.py" = ["F401", "F403"]  # Unused imports, import *
"tests/**/*.py" = [
    "S101",   # Use of assert
    "ARG",    # Unused function args
    "PLR2004", # Magic values in tests
]
"scripts/**/*.py" = [
    "T20",    # Print statements allowed in scripts
    "S602",   # Shell injection risk (scripts may use subprocess)
]

[tool.ruff.lint.isort]
# Import sorting configuration
force-single-line = false
force-sort-within-sections = false
lines-after-imports = 2
known-first-party = ["backend", "engine"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.mccabe]
# Maximum cyclomatic complexity
max-complexity = 10

[tool.ruff.lint.pydocstyle]
# Docstring convention
convention = "google"

[tool.ruff.lint.pylint]
# Pylint-specific settings
max-args = 8
max-branches = 15
max-returns = 6
max-statements = 50

[tool.ruff.format]
# Formatting configuration
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Enable preview features for better formatting
preview = false

# Docstring formatting
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.bandit]
# Bandit security configuration
# https://bandit.readthedocs.io/

# Severity and confidence levels
# Severity: low, medium, high
# Confidence: low, medium, high
skips = [
    "B101",  # assert_used - common in tests
    "B104",  # hardcoded_bind_all_interfaces - common in dev
    "B603",  # subprocess_without_shell_equals_true - false positives
]

exclude_dirs = [
    "tests",
    ".venv",
    "venv",
    "node_modules",
    "build",
    "dist",
]

# Test files
[tool.bandit.assert_used]
skips = ["*/test_*.py", "*_test.py", "*/tests/*"]
